// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render CurrentMoment correctly 1`] = `
<span>
  12/31/1969, 7:00 PM
</span>
`;

exports[`should render CurrentMoment with format correctly 1`] = `
<span>
  YYYY
</span>
`;
